# loinc_fetcher

./: .gitignore  fetch_loinc.py  loinc_aggreg.py  loinc_mapping_results_noDoc.xlsx  loinc_mapping_results_withDoc.xlsx  loinc_mapping_results_with_lcn.xlsx  loinc_parameters.csv  loinc_parameters_detailed.csv  loinc_tests.csv  loinc_tests_detailed.csv  pyproject.toml  readme.md  test_to_param_mapping.csv
